[BUGFIX] Center the image cropper
Reviewed-on: https://review.typo3.org/21889
Tested-by: Rens Admiraal
Original-Commit-Hash: 12df32525ab38d0503ed1a36e2419e4267d9ea7b

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_SecondaryInspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_SecondaryInspector.scss
@@ -46,3 +46,7 @@
 		height: 100%;
 	}
 }
+
+.neos-secondary-inspector-image-crop .jcrop-holder {
+	margin: $unit auto;
+}
